# hc-delimiter

./: .gitignore  CMakeLists.txt  README.md  cr.txt  crlf.txt
src/: main.cpp
